; ModuleID = '/home/carl/AnghaBench/git/extr_tag.c_get_tagged_oid.c'
source_filename = "/home/carl/AnghaBench/git/extr_tag.c_get_tagged_oid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }
%struct.tag = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.object_id }

@.str = private unnamed_addr constant [8 x i8] c"bad tag\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.object_id* @get_tagged_oid(%struct.tag* %0) #0 {
  %2 = alloca %struct.tag*, align 8
  store %struct.tag* %0, %struct.tag** %2, align 8
  %3 = load %struct.tag*, %struct.tag** %2, align 8
  %4 = getelementptr inbounds %struct.tag, %struct.tag* %3, i32 0, i32 0
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = icmp ne %struct.TYPE_2__* %5, null
  br i1 %6, label %9, label %7

7:                                                ; preds = %1
  %8 = call i32 @die(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  br label %9

9:                                                ; preds = %7, %1
  %10 = load %struct.tag*, %struct.tag** %2, align 8
  %11 = getelementptr inbounds %struct.tag, %struct.tag* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  ret %struct.object_id* %13
}

declare dso_local i32 @die(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
